# social-pulse

./: .commitlintrc.json  .dockerignore  .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.streamlit/: config.toml
dbt/: dbt_project.yml  profiles.docker.yml  profiles.yml
dbt/models/bronze/: _sources.yml
dbt/models/gold/: _gold__schema.yml  gold_campaign_daily.sql  gold_campaign_summary.sql  gold_post_search.sql
dbt/models/silver/: _silver__schema.yml  silver_ai_enrichment.sql  silver_posts.sql
docker/: Dockerfile  Dockerfile.dbt  docker-compose.yml
k8s/: README.md  configmap.yaml  deployment-api.yaml  deployment-crawl-worker.yaml  deployment-gold-builder.yaml  deployment-worker.yaml  namespace.yaml  pvc-data.yaml  service-api.yaml
scripts/: seed_data.py
scripts/transformations/: 01_bronze_to_silver_posts.sql  02_silver_to_gold_post_search.sql  03_silver_to_gold_campaign_daily.sql  04_silver_to_gold_campaign_summary.sql
src/api/: app.py  events.py  metrics.py  rate_limiter.py
src/application/: validators.py
src/application/use_cases/: build_campaign_daily.py  build_campaign_summary.py  build_gold.py  build_post_search.py  enrich_post.py  get_campaign_analytics.py  get_campaigns.py  get_cross_campaign.py  ingest_crawl.py  ingest_pipeline.py  list_search_requests.py  run_enrichment.py  search_gold_posts.py  search_posts.py
src/domain/: __init__.py  exceptions.py  interfaces.py
src/domain/entities/: __init__.py  ai_enrichment.py  ai_job.py  crawl_run.py  enriched_post.py  gold_campaign_daily.py  gold_campaign_summary.py  gold_post_search.py  language_result.py  raw_post.py  search_request.py  sentiment_result.py  topic_result.py
src/domain/value_objects/: __init__.py  ai_job_status.py  ai_job_type.py  crawl_status.py  date_range.py  platform.py  sentiment_label.py
src/infrastructure/ai/: __init__.py  language_detector.py  openai_client.py  openai_language_detector.py  openai_sentiment_analyzer.py  openai_topic_extractor.py  retry_jobs.py  sentiment_analyzer.py  topic_extractor.py  worker.py  zai_client.py  zai_language_detector.py  zai_sentiment_analyzer.py  zai_topic_extractor.py
src/infrastructure/crawling/: __init__.py  base.py  cli.py  purge.py  reddit_crawler.py  simulation_crawler.py  twitter_crawler.py  worker.py  youtube_crawler.py
src/infrastructure/gold/: builder.py
src/infrastructure/persistence/: duckdb_ai_enrichment_repository.py  duckdb_ai_job_repository.py  duckdb_crawl_run_repository.py  duckdb_enriched_post_repository.py  duckdb_gold_build_tracking_repository.py  duckdb_gold_campaign_daily_repository.py  duckdb_gold_campaign_summary_repository.py  duckdb_gold_post_search_repository.py  duckdb_post_repository.py  duckdb_search_request_repository.py  migrations.py
src/presentation/: app.py
src/presentation/components/: charts.py  filters.py  pipeline_progress.py
src/presentation/screens/: campaign_analytics.py  cross_campaign.py  post_explorer.py  search_input.py
src/shared/: backup.py  circuit_breaker.py  cli.py  config.py  db_maintenance.py  db_retry.py  http_retry.py  logging_config.py  prompts.py  retention.py  token_budget.py  worker_health.py
tests/: conftest.py  factories.py
tests/e2e/: conftest.py  test_campaign_analytics.py  test_cross_campaign.py  test_navigation.py  test_post_explorer.py  test_search_input.py
tests/integration/: test_benchmarks.py  test_crawl_pipeline.py  test_crawl_worker.py  test_enrichment_pipeline.py  test_gold_builder.py  test_gold_pipeline.py
tests/load/: README.md  locustfile.py
tests/unit/: test_factories.py
tests/unit/api/: test_app.py  test_auth_and_rate_limit.py  test_events.py  test_metrics.py  test_pipeline_idempotency.py
tests/unit/application/: test_build_campaign_daily.py  test_build_campaign_summary.py  test_build_post_search.py  test_enrich_post.py  test_get_campaign_analytics.py  test_get_campaigns.py  test_get_cross_campaign.py  test_ingest_crawl.py  test_search_gold_posts.py  test_search_posts.py  test_validators.py
tests/unit/domain/: test_ai_enrichment.py  test_ai_job.py  test_crawl_run.py  test_crawl_status.py  test_enriched_post.py  test_exceptions.py  test_gold_campaign_daily.py  test_gold_campaign_summary.py  test_gold_post_search.py  test_language_result.py  test_platform.py  test_raw_post.py  test_search_request.py  test_sentiment_result.py  test_silver_value_objects.py  test_topic_result.py
tests/unit/infrastructure/: test_crawl_worker.py  test_duckdb_ai_enrichment_repository.py  test_duckdb_ai_job_repository.py  test_duckdb_crawl_run_repository.py  test_duckdb_enriched_post_repository.py  test_duckdb_gold_campaign_daily_repository.py  test_duckdb_gold_campaign_summary_repository.py  test_duckdb_gold_post_search_repository.py  test_duckdb_post_repository.py  test_duckdb_search_request_repository.py  test_gold_builder_shutdown.py  test_language_detector.py  test_migrations.py  test_openai_client.py  test_openai_language_detector.py  test_openai_sentiment_analyzer.py  test_openai_topic_extractor.py  test_retry_jobs_cli.py  test_sentiment_analyzer.py  test_simulation_crawler.py  test_topic_extractor.py  test_worker_feature_flags.py  test_zai_client.py  test_zai_language_detector.py  test_zai_sentiment_analyzer.py  test_zai_topic_extractor.py
tests/unit/infrastructure/persistence/: test_migration_v4.py  test_migration_v5.py
tests/unit/shared/: test_backup.py  test_circuit_breaker.py  test_http_retry.py  test_logging_config.py  test_prompts.py  test_retention.py  test_token_budget.py  test_worker_health.py
