[project]
name = "socialpulse"
version = "0.1.0"
description = "Social Media Intelligence Platform - crawl, analyze, and compare social media conversations"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "SocialPulse Contributors"}]
keywords = ["social-media", "sentiment-analysis", "data-pipeline", "analytics", "duckdb"]

dependencies = [
    # Database & Storage
    "duckdb>=1.1.0",
    "polars>=1.0.0",

    # LLM API
    "openai>=1.0.0",

    # Crawling
    "httpx>=0.27.0",
    "yt-dlp>=2024.12.0",

    # Frontend
    "streamlit>=1.38.0",
    "plotly>=5.24.0",

    # API Server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "sse-starlette>=2.0.0",

    # Configuration & Utilities
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dbt = [
    "dbt-duckdb>=1.10.0",
]
ml = [
    "transformers>=4.45.0",
    "torch>=2.4.0",
    "lingua-language-detector>=2.0.0",
    "keybert>=0.8.0",
    "sentence-transformers>=3.0.0",
]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "factory-boy>=3.3.0",
    "faker>=28.0.0",

    # Code Quality
    "ruff>=0.6.0",
    "mypy>=1.11.0",

    # Type stubs
    "types-requests>=2.32.0",
    "pandas-stubs>=2.2.0",

    # E2E Testing
    "playwright>=1.46.0",

    # Pre-commit
    "pre-commit>=4.0.0",

    # Security
    "pip-audit>=2.7.0",
]

[project.scripts]
socialpulse = "src.presentation.app:main"
socialpulse-crawl = "src.infrastructure.crawling.cli:main"
socialpulse-enrich = "src.application.use_cases.run_enrichment:cli_main"
socialpulse-gold = "src.application.use_cases.build_gold:cli_main"
socialpulse-purge = "src.infrastructure.crawling.purge:main"
socialpulse-backup = "src.shared.backup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []

# ============================================================
# Ruff - Linter & Formatter
# ============================================================
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # Ruff-specific rules
    "PERF", # Perflint
    "PGH",  # pygrep-hooks
    "PIE",  # flake8-pie
    "PL",   # Pylint
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate (commented-out code)
    "S",    # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
    "S101",    # assert usage in tests
    "S608",    # SQL injection — all queries use parameterized placeholders
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "PLR2004", "ERA001"]
"src/**/interfaces.py" = ["PLR0904"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ============================================================
# mypy - Type Checking
# ============================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = [
    "duckdb.*",
    "polars.*",
    "transformers.*",
    "torch.*",
    "sentence_transformers.*",
    "keybert.*",
    "lingua.*",
    "openai.*",
    "plotly.*",
    "streamlit.*",
    "structlog.*",
    "uvicorn.*",
    "sse_starlette.*",
    "yt_dlp.*",
]
ignore_missing_imports = true

# ============================================================
# pytest - Testing
# ============================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=90",
]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (fast, no I/O)",
    "integration: Integration tests (real DB, mock APIs)",
    "e2e: End-to-end tests (full pipeline)",
    "slow: Slow tests (>1s)",
    "requires_api: Tests requiring live API keys",
]

# ============================================================
# pyright - Static Type Checking
# ============================================================
[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
ignore = ["src/presentation/app.py"]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "src/**/__init__.py",
    "src/presentation/app.py",
    "src/infrastructure/ai/worker.py",
    "src/infrastructure/gold/builder.py",
    "src/infrastructure/crawling/cli.py",
    "src/infrastructure/crawling/purge.py",
    "src/application/use_cases/run_enrichment.py",
    "src/application/use_cases/build_gold.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pass",
    "...",
]
